# libpwsafe

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  config.h.in  vcpkg.json
.devcontainer/: Dockerfile  Dockerfile-fedora  Dockerfile-ubuntu  devcontainer.json
.github/: Dockerfile
.github/workflows/: cmake-libpwsafe.yml  main.yml
api/: CMakeLists.txt  pwsafe.h
cmake/: CPackDescription.txt  FindNettle.cmake
docs/: docs.css
src/: CMakeLists.txt  block.c  db.c  open_database.c  pwsafe_priv.h  util.c
test/: CMakeLists.txt  test.cc
